SubBt/force-app/main/default/objects/RFQ_Item__c/RFQ_Item__c.object-meta.xml
<CustomObject>
    <label>RFQ Lines</label>
    <nameField>
        <label>RFQ Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFQ Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>