SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Item</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>RFQ_Items</relationshipName>
    <type>Lookup</type>
</CustomField>