SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>This is the Description your Vendor will see when they receive their email for the bid.  You really want to make sure you fill in the details for the work in this field.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>