SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Master_Item__c.field-meta.xml
<CustomField>
    <fullName>Master_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates this item can be used for import on future RFQ&apos;s.</inlineHelpText>
    <label>Master Item</label>
    <type>Checkbox</type>
</CustomField>