SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Notes_Details__c.field-meta.xml
<CustomField>
    <fullName>Notes_Details__c</fullName>
    <label>Notes &amp; Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>