SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <formula>Budget_Item__r.Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>