SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote__c</fullName>
    <formula>Quote_Item__r.Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>