SubBt/force-app/main/default/objects/RFQ_Item__c/fields/Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Item</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipName>RFQ_Items</relationshipName>
    <type>Lookup</type>
</CustomField>