SubBt/force-app/main/default/objects/RFQ_Item__c/fields/RFQ_Items__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Items__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ Items</label>
    <type>Text</type>
</CustomField>