SubBt/force-app/main/default/objects/RFQ_Item__c/fields/RFQ_Package__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Package__c</fullName>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipLabel>RFQ Lines</relationshipLabel>
    <relationshipName>RFQ_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>