SubBt/force-app/main/default/objects/RFQ_Item__c/validationRules/RFQStatusAwarded.validationRule-meta.xml
<ValidationRule>
    <fullName>RFQStatusAwarded</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISNEW(),
 NOT(ISPICKVAL(RFQ_Package__r.Status__c, &quot;Awarded&quot;))
)</errorConditionFormula>
    <errorMessage>Canot Create a Record.Until RFQ status will be Awarded</errorMessage>
</ValidationRule>